--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -4,43 +4,17 @@ allow-lan: true
 mode: Rule
 log-level: info
 external-controller: :9090
-experimental:
-  ignore-resolve-fail: true
-cfw-latency-url: 'http://cp.cloudflare.com/generate_204'
-cfw-latency-timeout: 3000
-cfw-latency-type: 1
-cfw-conn-break-strategy: true
-clash-for-android:
-  ui-subtitle-pattern: '[一-龥]{2,4}'
-url-rewrite:
-- ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
-- ^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
 dns:
-  enable: true
-  ipv6: false
-  listen: 0.0.0.0:53
-  enhanced-mode: redir-host
-  fake-ip-range: 198.18.0.1/16
-  fake-ip-filter:
-     - '*.lan'
-     - localhost.ptlogin2.qq.com
+  enabled: true
   nameserver:
-     - 223.5.5.5
-     - 119.29.29.29
-     - https://doh.pub/dns-query
-     - https://dns.alidns.com/dns-query
+    - 119.29.29.29
+    - 223.5.5.5
   fallback:
-     - 8.8.8.8
-     - 1.1.1.1
-     - tls://1.0.0.1:853
-     - tls://dns.google:853
-     - https://cloudflare-dns.com/dns-query
-     - https://dns.google/dns-query
-  fallback-filter:
-     geoip: true
-     ipcidr:
-       - 240.0.0.0/4
-
+    - 8.8.8.8
+    - 8.8.4.4
+    - tls://1.0.0.1:853
+    - tls://dns.google:853
+    
 rules:
   - RULE-SET, Abema, JP&KR-Media
   - RULE-SET, Afreecatv, JP&KR-Media
