--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -17,7 +17,7 @@ dns:
     
 rules:
   - RULE-SET, Abema, JP&KR-Media
-  - RULE-SET, Afreecatv, JP&KR-Media
+  - RULE-SET, AfreecaTV, JP&KR-Media
   - RULE-SET, Amazon, US&EU-Medai
   - RULE-SET, Apple, Apple
   - RULE-SET, AppleMusic, Music
@@ -75,6 +75,7 @@ rules:
 
 rule-providers:
   Abema: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Abema.yaml", path: ./rule-providers/Abema, interval: 86400}
+  AfreecaTV: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/AfreecaTV.yaml", path: ./rule-providers/AfreecaTV, interval: 86400}
   Amazon: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Amazon.yaml", path: ./rule-providers/Amazon, interval: 86400}
   Apple: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Apple.yaml", path: ./rule-providers/Apple, interval: 86400}
   AppleMusic: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/AppleMusic.yaml", path: ./rule-providers/AppleMusic, interval: 86400}
