--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -18,7 +18,7 @@ dns:
 rules:
   - RULE-SET, Abema, JP&KR-Media
   - RULE-SET, AfreecaTV, JP&KR-Media
-  - RULE-SET, Amazon, US&EU-Medai
+  - RULE-SET, Amazon, US&EU-Media
   - RULE-SET, Apple, Apple
   - RULE-SET, AppleMusic, Music
   - RULE-SET, Bahamut, HK&TW-Media 
@@ -27,12 +27,12 @@ rules:
   - RULE-SET, CN-Media, Domestic
   - RULE-SET, Coolapk, BBS
   - RULE-SET, Copilot, AI
-  - RULE-SET, DAZN, US&EU-Medai
+  - RULE-SET, DAZN, US&EU-Media
   - RULE-SET, DMM, JP&KR-Media
   - RULE-SET, Discord, BBS
   - RULE-SET, Disney, Disney
   - RULE-SET, Douyin, Douyin
-  - RULE-SET, ESPN, US&EU-Medai
+  - RULE-SET, ESPN, US&EU-Media
   - RULE-SET, Emby, Emby
   - RULE-SET, Epic, Games
   - RULE-SET, Facebook, Meta
@@ -42,7 +42,7 @@ rules:
   - RULE-SET, Google, Google
   - RULE-SET, HBO, US&EU-Medai
   - RULE-SET, Hamivideo, HK&TW-Media
-  - RULE-SET, Hulu, US&EU-Medai
+  - RULE-SET, Hulu, US&EU-Media
   - RULE-SET, Instagram, Meta
   - RULE-SET, KKBOX, Music
   - RULE-SET, KKTV, HK&TW-Media
@@ -54,10 +54,10 @@ rules:
   - RULE-SET, News, News
   - RULE-SET, OpenAI, AI
   - RULE-SET, Pandora, JP&KR-Media
-  - RULE-SET, Paramount, US&EU-Medai 
-  - RULE-SET, Peacock, US&EU-Medai
+  - RULE-SET, Paramount, US&EU-Medaia
+  - RULE-SET, Peacock, US&EU-Media
   - RULE-SET, Pixiv, JP&KR-Media
-  - RULE-SET, Primvideo, US&EU-Medai
+  - RULE-SET, Primvideo, US&EU-Media
   - RULE-SET, Qobuz, Music
   - RULE-SET, Reddit, BBS
   - RULE-SET, Spotify, Music
