--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -31,7 +31,7 @@ rules:
   - RULE-SET, DMM, JP&KR-Media
   - RULE-SET, Discord, BBS
   - RULE-SET, Disney, Disney
-  - RULE-SET, Douyin, Douyin
+  - RULE-SET, Douyin, Domestic
   - RULE-SET, ESPN, US&EU-Media
   - RULE-SET, Emby, Emby
   - RULE-SET, Epic, Games
