--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -26,32 +26,32 @@ rules:
   - DOMAIN,alt7-mtalk.google.com,Google
   - DOMAIN,alt8-mtalk.google.com,Google
   - DOMAIN,mtalk.google.com,Google
-  - IP-CIDR,108.177.125.188/32,no-resolve,Google
-  - IP-CIDR,142.250.10.188/32,no-resolve,Google
-  - IP-CIDR,142.250.31.188/32,no-resolve,Google
-  - IP-CIDR,142.250.4.188/32,no-resolve,Google
-  - IP-CIDR,142.250.96.188/32,no-resolve,Google
-  - IP-CIDR,172.217.194.188/32,no-resolve,Google
-  - IP-CIDR,172.217.218.188/32,no-resolve,Google
-  - IP-CIDR,172.217.219.188/32,no-resolve,Google
-  - IP-CIDR,172.253.122.188/32,no-resolve,Google
-  - IP-CIDR,172.253.63.188/32,no-resolve,Google
-  - IP-CIDR,173.194.175.188/32,no-resolve,Google
-  - IP-CIDR,173.194.218.188/32,no-resolve,Google
-  - IP-CIDR,209.85.233.188/32,no-resolve,Google
-  - IP-CIDR,64.233.177.188/32,no-resolve,Google
-  - IP-CIDR,64.233.186.188/32,no-resolve,Google
-  - IP-CIDR,64.233.187.188/32,no-resolve,Google
-  - IP-CIDR,64.233.188.188/32,no-resolve,Google
-  - IP-CIDR,64.233.189.188/32,no-resolve,Google
-  - IP-CIDR,74.125.127.188/32,no-resolve,Google
-  - IP-CIDR,74.125.137.188/32,no-resolve,Google
-  - IP-CIDR,74.125.203.188/32,no-resolve,Google
-  - IP-CIDR,74.125.204.188/32,no-resolve,Google
-  - IP-CIDR,74.125.206.188/32,no-resolve,Google
-  - IP-CIDR,74.125.23.188/32,no-resolve,Google
-  - IP-CIDR,74.125.24.188/32,no-resolve,Google
-  - IP-CIDR,74.125.28.188/32,no-resolve,Google
+  - IP-CIDR,108.177.125.188/32,Google
+  - IP-CIDR,142.250.10.188/32,Google
+  - IP-CIDR,142.250.31.188/32,Google
+  - IP-CIDR,142.250.4.188/32,Google
+  - IP-CIDR,142.250.96.188/32,Google
+  - IP-CIDR,172.217.194.188/32,Google
+  - IP-CIDR,172.217.218.188/32,Google
+  - IP-CIDR,172.217.219.188/32,Google
+  - IP-CIDR,172.253.122.188/32,Google
+  - IP-CIDR,172.253.63.188/32,Google
+  - IP-CIDR,173.194.175.188/32,Google
+  - IP-CIDR,173.194.218.188/32,Google
+  - IP-CIDR,209.85.233.188/32,Google
+  - IP-CIDR,64.233.177.188/32,Google
+  - IP-CIDR,64.233.186.188/32,Google
+  - IP-CIDR,64.233.187.188/32,Google
+  - IP-CIDR,64.233.188.188/32,Google
+  - IP-CIDR,64.233.189.188/32,Google
+  - IP-CIDR,74.125.127.188/32,Google
+  - IP-CIDR,74.125.137.188/32,Google
+  - IP-CIDR,74.125.203.188/32,Google
+  - IP-CIDR,74.125.204.188/32,Google
+  - IP-CIDR,74.125.206.188/32,Google
+  - IP-CIDR,74.125.23.188/32,Google
+  - IP-CIDR,74.125.24.188/32,Google
+  - IP-CIDR,74.125.28.188/32,Google
 #Rule-Set
   - RULE-SET, Abema, JP&KR-Media
   - RULE-SET, AfreecaTV, JP&KR-Media
