--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -16,43 +16,6 @@ dns:
     - tls://dns.google:853
     
 rules:
-#Google FCM
-  - DOMAIN,alt1-mtalk.google.com,Google
-  - DOMAIN,alt2-mtalk.google.com,Google
-  - DOMAIN,alt3-mtalk.google.com,Google
-  - DOMAIN,alt4-mtalk.google.com,Google
-  - DOMAIN,alt5-mtalk.google.com,Google
-  - DOMAIN,alt6-mtalk.google.com,Google
-  - DOMAIN,alt7-mtalk.google.com,Google
-  - DOMAIN,alt8-mtalk.google.com,Google
-  - DOMAIN,mtalk.google.com,Google
-  - IP-CIDR,108.177.125.188/32,Google
-  - IP-CIDR,142.250.10.188/32,Google
-  - IP-CIDR,142.250.31.188/32,Google
-  - IP-CIDR,142.250.4.188/32,Google
-  - IP-CIDR,142.250.96.188/32,Google
-  - IP-CIDR,172.217.194.188/32,Google
-  - IP-CIDR,172.217.218.188/32,Google
-  - IP-CIDR,172.217.219.188/32,Google
-  - IP-CIDR,172.253.122.188/32,Google
-  - IP-CIDR,172.253.63.188/32,Google
-  - IP-CIDR,173.194.175.188/32,Google
-  - IP-CIDR,173.194.218.188/32,Google
-  - IP-CIDR,209.85.233.188/32,Google
-  - IP-CIDR,64.233.177.188/32,Google
-  - IP-CIDR,64.233.186.188/32,Google
-  - IP-CIDR,64.233.187.188/32,Google
-  - IP-CIDR,64.233.188.188/32,Google
-  - IP-CIDR,64.233.189.188/32,Google
-  - IP-CIDR,74.125.127.188/32,Google
-  - IP-CIDR,74.125.137.188/32,Google
-  - IP-CIDR,74.125.203.188/32,Google
-  - IP-CIDR,74.125.204.188/32,Google
-  - IP-CIDR,74.125.206.188/32,Google
-  - IP-CIDR,74.125.23.188/32,Google
-  - IP-CIDR,74.125.24.188/32,Google
-  - IP-CIDR,74.125.28.188/32,Google
-#Rule-Set
   - RULE-SET, Abema, JP&KR-Media
   - RULE-SET, AfreecaTV, JP&KR-Media
   - RULE-SET, Amazon, US&EU-Media
@@ -77,6 +40,7 @@ rules:
   - RULE-SET, Games, Games
   - RULE-SET, Gemini, AI
   - RULE-SET, Github, BBS
+  - RULE-SET, Google FCM, FCM
   - RULE-SET, Google, Google
   - RULE-SET, HBO, US&EU-Media
   - RULE-SET, Hamivideo, HK&TW-Media
@@ -140,6 +104,7 @@ rule-providers:
   Games: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Games.yaml", path: ./rule-providers/Games, interval: 86400}
   Gemini: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Gemini.yaml", path: ./rule-providers/Gemini, interval: 86400}
   Github: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Github.yaml", path: ./rule-providers/Github, interval: 86400}
+  Google FCM: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Google FCM.yaml", path: ./rule-providers/Google FCM, interval: 86400}
   Google: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Google.yaml", path: ./rule-providers/Google, interval: 86400}
   HBO: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/HBO.yaml", path: ./rule-providers/HBO, interval: 86400}
   Hamivideo: {type: http, behavior: classical, url: "https://raw.githubusercontent.com/alanzsw/rule-providers/main/Hamivideo.yaml", path: ./rule-providers/Hamivideo, interval: 86400} 
