--- a/canton-rules.yaml
+++ b/canton-rules.yaml
@@ -32,10 +32,10 @@ rules:
   - RULE-SET, AppleMusic, Music
   - RULE-SET, AppleTV, Apple
   - RULE-SET, Bahamut, HK&TW-Media 
-  - RULE-SET, BaiduTieba, BBS
+  - RULE-SET, BaiduTieba, Domestic
   - RULE-SET, Bilibili, Bilibili
   - RULE-SET, CN-Media, Domestic
-  - RULE-SET, Coolapk, BBS
+  - RULE-SET, Coolapk, Domestic
   - RULE-SET, Copilot, AI
   - RULE-SET, DAZN, US&EU-Media
   - RULE-SET, DMM, JP&KR-Media
@@ -82,7 +82,7 @@ rules:
   - RULE-SET, ViuTV, HK&TW-Media
   - RULE-SET, Youtube, Google
   - RULE-SET, YoutubeMusic, Music
-  - RULE-SET, Zhihu, BBS
+  - RULE-SET, Zhihu, Domestic
   - RULE-SET, TVB, HK&TW-Media
   - RULE-SET, iCloud, Apple
   - MATCH, cantoN
