--- a/Dler-rules.ini
+++ b/Dler-rules.ini
@@ -1,12 +1,10 @@
 [custom]
-
-rename_node=狮城@新加坡
 rename_node=🇨🇳@🇹🇼
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/Dler_rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/Dler_rules.yml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记)
 
 udp=true
 enable_rule_generator=false
