--- a/Common-rules.ini
+++ b/Common-rules.ini
@@ -1,11 +1,10 @@
 [custom]
 rename_node=🇨🇳@🇼🇸
-rename_node=狮城@新加坡
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/Nexitally-rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/Nexitally-rules.yaml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|ZA|EIP|海外)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬|临时)
 
 udp=true
 sort=true
