--- a/cantoN-rules.ini
+++ b/cantoN-rules.ini
@@ -4,7 +4,7 @@ rename_node=🇨🇳@🇹🇼
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.yaml
 
-exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|油佬|临时)
+exclude_remarks=(Expire|Traffic|官网|备用|重置|流量|到期|套餐|剩余|工作室|请|全局代理|忘记|海外|续费|临时)
 
 udp=true
 enable_rule_generator=false
