--- a/cantoN-rules.yaml
+++ b/cantoN-rules.yaml
@@ -6,8 +6,14 @@ allow-lan: false
 mode: Rule
 log-level: info
 external-controller: ':9990'
+experimental:
+    ignore-resolve-fail: true
+cfw-latency-url: 'http://cp.cloudflare.com/generate_204'
+cfw-latency-timeout: 3000
+cfw-latency-type: 1
+cfw-conn-break-strategy: true
 clash-for-android:
-    append-system-dns: false
+    ui-subtitle-pattern: '[一-龥]{2,4}'
 hosts:
     mtalk.google.com: 108.177.125.188
     raw.githubusercontent.com: 151.101.76.133
