--- a/cantoN-rules.yaml
+++ b/cantoN-rules.yaml
@@ -13,7 +13,7 @@ cfw-latency-timeout: 3000
 cfw-latency-type: 1
 cfw-conn-break-strategy: true
 clash-for-android:
-    ui-subtitle-pattern: '[一-龥]{2,4}'
+    append-system-dns: false
 hosts:
     mtalk.google.com: 108.177.125.188
     raw.githubusercontent.com: 151.101.76.133
