--- a/cantoN-rules.ini
+++ b/cantoN-rules.ini
@@ -1,5 +1,12 @@
 [custom]
 rename_node=🇨🇳@🇹🇼
+rename_node=HK-@香港
+rename_node=US-@美國
+rename_node=TW-@臺灣
+rename_node=JP-@日本
+rename_node=SG-@新加坡
+rename_node=Peter佬专线@
+rename_node=油佬专线@
 
 custom_proxy_group=!!import:https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.txt
 clash_rule_base=https://raw.githubusercontent.com/alanzsw/rules/main/cantoN-rules.yaml
