--- a/cantoN-rules.ini
+++ b/cantoN-rules.ini
@@ -1,10 +1,11 @@
 [custom]
 rename_node=🇨🇳@🇹🇼
 rename_node=HK-@香港
-rename_node=US-@美國
-rename_node=TW-@臺灣
+rename_node=US-@美国
+rename_node=TW-@台湾
 rename_node=JP-@日本
 rename_node=SG-@新加坡
+rename_node=KR-@南韩
 rename_node=Peter佬专线@
 rename_node=油佬专线@
 
